# GUI_OV2SLAM

GUI_OV2SLAM/: CMakeLists.txt  Dockerfile  package.xml
GUI_OV2SLAM/launch/: visualizer.launch.py
GUI_OV2SLAM/src/: main.cpp
